syntax = "proto3";

option java_multiple_files = true;

package com.grpc.group;

message Group{

    int32 id=1;

    string name=2;

    string avatar=3;

    int32 creator=4;

    int32 userCnt=5;

    int32 status=6;

    int32 updated=7;

    int32 created=8;
}

message GroupRequest {
    int32 id=1;

    string name=2;

    string avatar=3;

    int32 creator=4;

    repeated Group group=5;

    int32 userCnt=6;

    int32 updated=7;


}

message GroupResponse {
    int32 id=1;

    string name=2;

    string avatar=3;

    int32 creator=4;

    repeated Group group=5;

    int32 status_id=6;

    int32 userCnt=7;

}

service GroupService{
    rpc listGroup(GroupRequest) returns (GroupResponse);
    rpc addGroup(GroupRequest) returns (GroupResponse);
    rpc removeGroup(GroupRequest) returns (GroupResponse);
    rpc modifyGroup(GroupRequest) returns (GroupResponse);
}
